# ChangeLog for dev-util/git
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.333 2009/04/13 03:02:51 robbat2 Exp $

*git-1.6.2.3 (13 Apr 2009)

  13 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.2.3.ebuild:
  Version bump.

  13 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> git-1.6.2.2-r1.ebuild,
  git-9999.ebuild:
  Bug #221179, do not install perl .packlist.

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> git-1.6.2.2-r1.ebuild,
  git-9999.ebuild:
  Manpages were missed in live ebuild.

  05 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> git-9999.ebuild:
  Upstream is mergign the noperl patch now.

  05 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> git-9999.ebuild:
  Forgot a bit.

  05 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> git-1.6.2.2-r1.ebuild:
  Refix bug #237210, missed a part.

*git-9999 (03 Apr 2009)
*git-1.6.2.2-r1 (03 Apr 2009)

  03 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.2.2-r1.ebuild,
  +git-9999.ebuild:
  Bug #238023 - add an scm-capable ebuild for Git, use it to tidy up the
  ebuild a bit too. Based on the work by Sebastian Pipping
  <webmaster@hartwork.org>.

*git-1.6.2.2 (03 Apr 2009)

  03 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.2.2.ebuild:
  Version bump, also fixes bug #237210 for Emacs users.

  03 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  files/20090305-git-1.6.2-noperl.patch:
  Fix testsuite functionality with USE=-perl, the add-interactive test uses
  perl and was not excluded.

  23 Mar 2009; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Update metadata, ricmm is joining as a maintainer.

  21 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing ferdy as a maintainer since he was retired.

  06 Mar 2009; Christian Faulhammer <fauli@gentoo.org> git-1.6.2.ebuild:
  fix HOMEPAGE

*git-1.6.2 (06 Mar 2009)
