@@ -40,6 +40,7 @@ DIST git-1.6.1.tar.bz2 1971286 RMD160 41798548551362611499fd2a525a42f5182b1d20 S
 DIST git-1.6.2.2.tar.bz2 2016513 RMD160 c48641c3b995222d2b70f85482e66d9f66bc1734 SHA1 c5edf42bb2d1e9cbb89a63712bfd567330573190 SHA256 7b440c1589de36e94b751cfb3b9d60d9a3131eeab8229e759a1fd0328ea36166
 DIST git-1.6.2.3.tar.bz2 2017249 RMD160 6df25ea7e1b51cf2aeeac02e8df6ec55257a46d2 SHA1 902452eff5f35b4a915f6e4d90a83391b765ed4d SHA256 c61eaf1c775b56b1421d1f53e4cd4f1eb9a0fd874d653f4810db126cf14651ba
 DIST git-1.6.2.tar.bz2 2016213 RMD160 7e28be59954173666e26940ca66dd95f99cf029b SHA1 685b9e203786dd4bcd7672088bcac42e22930ee0 SHA256 ab7dc40240092aa2e72a8db7e0045893ca5fa07a936e9fa83b242248e3c9f635
+DIST git-1.6.3.rc4.tar.bz2 2055437 RMD160 cf07f48a145a8ed38b122761b4f6e3034ec3f1b4 SHA1 df53c134e3d5ea0b8fcd77db4719f288f6c38692 SHA256 1fbaae9feca168a8b4b9bff25d75b1ac7912d6dfb0883ef8267e7c69bd1429b9
 DIST git-htmldocs-1.5.1.6.tar.bz2 489138 RMD160 eda63828bbb928699c9b3bb52876d7b7dc489ba7 SHA1 907749b4eba99c696589be750bc9432b9818954b SHA256 566928345f80850bdebb278d52591f017041d9de67b2cd561963065c847c6685
 DIST git-htmldocs-1.5.3.7.tar.bz2 549391 RMD160 18d01c803fd529ac897ae249ce4e05193ee9850a SHA1 926fb29604d69ce45ecf7b57d1b8feeb6c356f9b SHA256 e28c7e149e0f5adb66093af287dffe0caef83926ae08c6cdb6a2d35bc9148d04
 DIST git-htmldocs-1.5.3.8.tar.bz2 549444 RMD160 f4df777094158beea16bd2f0783ef846198e2c36 SHA1 d822887c45437daebf08c7cfe6e93a4ce5136fd3 SHA256 200a7231d6a594aeb5cb0c0e1cf25513c086f53b84170c7c5376199b2659b874
@@ -64,6 +65,7 @@ DIST git-htmldocs-1.6.1.tar.bz2 713909 RMD160 d592885906d0d7fa6283e9a40226f191a4
 DIST git-htmldocs-1.6.2.2.tar.bz2 730394 RMD160 71e189cc6b0ce212ad468664a6fba87f5a1618a4 SHA1 0daafac257a5aa9210d02303ee30f4334b197393 SHA256 96bb0e4ea6ab952e8860cf7f8eccf64d58139f9ede235064cd88777c2d1d1ed5
 DIST git-htmldocs-1.6.2.3.tar.bz2 730139 RMD160 adfc3807858333533998a3e6fcb87023c94a87a5 SHA1 89b0b5ad1c1524088250b887a3b7cde03b309e64 SHA256 5eecea976d555f264f73572ee3f97ddf6a721b33ad2b8744049c0df6b5c02329
 DIST git-htmldocs-1.6.2.tar.bz2 727053 RMD160 a915884c94ac1cf2311389b32c410d12203b43e5 SHA1 4943d51bf49a574e1cefe3833ef6820964b40455 SHA256 e8847d1d2051db1ac1c8a9cf838584d52aad3ea999fb038fd76751ab14bf6a55
+DIST git-htmldocs-1.6.3.rc4.tar.bz2 741137 RMD160 227b83c87931a62dce6324742e69edc06977ff9a SHA1 8153a15bab07c7e027e9f9d4f4c3fc6a2b324f63 SHA256 4004f4690918f74d69924f9c5f43b2723384a337d430f2ad6e46b2784b094c88
 DIST git-manpages-1.5.1.6.tar.bz2 133945 RMD160 ed047e78031882fb1d954ed9368127e4d0019da8 SHA1 f4eeb116aaeeabf329c9de8d49421af42e4a6f51 SHA256 22a06a220a915b3c1493462f0d902ea70d1dee25e0362984a1c896a73c721c4d
 DIST git-manpages-1.5.3.7.tar.bz2 147932 RMD160 fd4b45c221cbc63f580a32595c59eb52da1baa2f SHA1 7cc45f156298d0fbd4ead4a9b2096ed2143287b8 SHA256 870e68ef57f4175152b9b8decc721d8cbc9850ed8eda73919fc9e060f3968ffa
 DIST git-manpages-1.5.3.8.tar.bz2 147875 RMD160 c2a15b7a0742f14a70d0bf06d4d14fe9cf2b329b SHA1 15b9ece73c28897affb5da187835d19ff20e9962 SHA256 73a7cc2c0473694d454a6b7cb311ccdeb82f350bc8e652229d361592ea0a482f
@@ -88,6 +90,7 @@ DIST git-manpages-1.6.1.tar.bz2 231011 RMD160 98f8af44e2b10898df0c4b599e0f88c0d5
 DIST git-manpages-1.6.2.2.tar.bz2 236466 RMD160 5719e66084aab0a9bb040b8859845091bab465ef SHA1 5748daa7da1839922f8651cd95b62cacca6328a4 SHA256 e6dc1cf2e2e2748314300c825a36ff808158d5d288b7d75009c40972a338f6f5
 DIST git-manpages-1.6.2.3.tar.bz2 236557 RMD160 69bba5db8eccc66d55964182cc8bb59788c8b812 SHA1 3bac1d069ddc842ad6d999961d67c975dbdfed5a SHA256 ac069d89745a35f0fcdfe29512524273fa8c41cfe6888c9e6fb0c7e04b2956ac
 DIST git-manpages-1.6.2.tar.bz2 236341 RMD160 b770b9e5bcc259735ae72412eda9b1ec9b587f08 SHA1 e621826b090cac60d28758eb9ec2c7ab4c0d63ba SHA256 13e7d352f9cac1f34d64b5deb006d0961941e43975a33f7d8507df58df1fe68e
+DIST git-manpages-1.6.3.rc4.tar.bz2 243392 RMD160 b3afca4c032471a304e30521ad1397066dcb0410 SHA1 19ca42a2e56808fdbc9a8a91fab6b263f69f55e7 SHA256 f25c836163a814abb702ce1b236eb4b0e283978860c60782aaf373d767939b59
 EBUILD git-1.5.1.6.ebuild 4400 RMD160 c81b28b5efca8244c87cc5f0ac1923c03c9e5b1f SHA1 bb71d825a1c1eef4a5ba26958a7e4dd35b02d938 SHA256 8cbd6c76e3cc3a9e00a3accdb69dec8e134b99acf7cad1e39b243c6289559734
 EBUILD git-1.5.3.7-r1.ebuild 6371 RMD160 847ed38b63b34256ce17991dc6c4dbd34c207955 SHA1 d6edbbd1bcd150992f69eb2655e1ab5b4a925420 SHA256 7d881d0f76b68244aa0021e71beb8537197f2147aa464b5707c39217ec6be87c
 EBUILD git-1.5.3.8.ebuild 6388 RMD160 a76f9cc851a04c6b898f7f34d85b5433e28cfe2a SHA1 d10fbe86d2825b563025c0014db93cbbfd57d47c SHA256 13dc2bf683b369d4b61016587072db9c6b6af54ff0aa32ff2a542ec968a42b84
@@ -116,6 +119,7 @@ EBUILD git-1.6.2.2-r1.ebuild 9483 RMD160 353cf39456b1021dee4175026b9f5406f9e1523
 EBUILD git-1.6.2.2.ebuild 8528 RMD160 aae037fc6b4af9cba28048c770138691ac607d03 SHA1 3b72b7eb7aa8bf8266c2f64c262552b07c670f02 SHA256 151a6c06c5f13ada3d57629aa4ac46284995950279c11b7928be5cea9adda06d
 EBUILD git-1.6.2.3.ebuild 9480 RMD160 1608d1e2d7f5665c30d9e273009b423478e99281 SHA1 76975c25b501909cd0c2b5d0d9a0e92c5430363c SHA256 7418ee5ffcc070339b5fcc66e17a0f1bc33ec1755d8d7fb5c30f18d9475d07e8
 EBUILD git-1.6.2.ebuild 8443 RMD160 0138c4f89eed7055664bb2a84d6e41bc1be60e2d SHA1 7bc2abe4a18f4150792724e6550817f2802ef48a SHA256 a2c7e4858f2bd21973d818d059023cfd2c98177a0bae2aa1c31fff1e7309ec13
+EBUILD git-1.6.3_rc4.ebuild 9538 RMD160 fc9973d8fb1cdcc418296d4369974eef24742014 SHA1 5efc6bc2846e389ef6bdbfdd4ce5a572618130b5 SHA256 1133fdfa4e16394eb5da30655e26ccf1680d1fe9be599c312c8df8ce518a76c7
 EBUILD git-9999.ebuild 9447 RMD160 0f3e10d371c3e44cf3825f9c84840dced2ba0575 SHA1 b2a5b9c5f13600344d368085b2e9df831fd4863d SHA256 3351e00fb6a0bc7382f96efaf4bb378f45725c2c6c2dffda6b4e8dc641d5b529
-MISC ChangeLog 50102 RMD160 03e1261fbe92ffc3f15495aa3b10be81122efeef SHA1 4a07d71dbbf0a27d8f8bf6632a29f7930ec1ed18 SHA256 930feef0051f671bcf6dcfa7a2e2488c58cd28631ea2c99dc52af8010a3da02a
+MISC ChangeLog 50290 RMD160 dc030e0e74f72d46656beeaaf798d0df38f6e0b2 SHA1 c2d4dc318bb0b39ce9f58ad32b5c4d8b6cc6f3fb SHA256 e3f14742844e781eebbc54d79ed3d58dbc3cf3000a1f2e2768587faa7b45e028
 MISC metadata.xml 1535 RMD160 1117b90f1e7550ce3a47f844ac17db78ed803cc3 SHA1 223d8e6b2faf20bf290d90d0d6322473daa49b0c SHA256 58d9f467528fee5c7062d0a2344a3b61ff0b8b7a0a84dffc9f56557f7eadd70b
