@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.333 2009/04/13 03:02:51 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.334 2009/05/05 17:04:12 robbat2 Exp $
+
+*git-1.6.3_rc4 (05 May 2009)
+
+  05 May 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.3_rc4.ebuild:
+  Version bump to release candidate for 1.6.3. In package.mask for the
+  moment.
 
 *git-1.6.2.3 (13 Apr 2009)
 
